# course_project

./: .gitignore  .gitmodules  CMakeLists.txt  file.cpp  layer.cpp  layer.h  main.cpp  network.cpp  network.h  penalty_function.cpp  penalty_function.h  vector.cpp
